# keycloak-poc

./: README.md
backend/: .env.keycloak_only.production  Dockerfile  Dockerfile.keycloak  Dockerfile.postgresql  Keycloak POC - Integration Tests.postman_collection.json  Makefile  README.md  Radiology Session Management API.postman_collection.json  Radiology Session Management Environment.postman_environment.json  alembic.ini  build-and-run.sh  docker-compose-v0.yml  docker-compose.yml  keycloak-poc-api.postman_collection.json  keycloak.conf  main.py  postman_collection.json  postman_environment.json  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 7a505ef7d95e_add_session_tables.py  97b3c585fe83_create_initial_tables.py
backend/alembic_backup/: alembic.ini  env.py
backend/alembic_backup/versions/: 001_initial_tables.py
backend/app/api/: auth.py  session.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py  redis.py
backend/app/dependencies/: redis.py  utils.py
backend/app/models/: __init__.py  report_models.py  session_models.py  user.py
backend/app/schemas/: auth.py  user.py  user_management.py
backend/app/services/: __init__.py  auth_service.py  kafka_service.py  keycloak_service.py  logging_config.py  redis_service.py  session_management_service.py  session_service.py  (+1 more)
backend/keycloak/: realm-export.json
backend/nginx/: nginx.conf
backend/redis/: redis-entrypoint.sh  redis.conf
backend/tests/: conftest.py  test_auth.py  test_integration.py  test_users.py
(+15 files in other folders)
