[project]
name = "keycloak-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.12.1",
    "asyncpg==0.29.0",
    "black>=25.1.0",
    "fastapi==0.104.1",
    "httpx==0.25.2",
    "psycopg2-binary==2.9.9",
    "pydantic[email]==2.5.0",
    "pydantic-settings==2.1.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-keycloak==3.7.0",
    "python-multipart==0.0.6",
    "redis==5.0.1",
    "sqlalchemy==2.0.23",
    "uvicorn[standard]==0.24.0",
]
